--- a/tourism_project/templates/home.html
+++ b/tourism_project/templates/home.html
@@ -39,11 +39,6 @@
       color: black;
     }
 
-    .header a.active {
-      background-color: dodgerblue;
-      color: white;
-    }
-
     .header-right {
       float: right;
     }
@@ -65,10 +60,10 @@
 
 <div class="header">
   <a href="#home" class="logo">
-    <img src="resources/assets/Tourism.png" alt="Company Logo">
+    <img src="resources/assets/Logo.png" alt="Logo">
   </a>
   <div class="header-right">
-    <a class="active" href="#destinations">Destinations</a>
+    <a href="#destination">Destinations</a>
     <a href="#activities">Activities</a>
     <a href="#accommodation">Accommodations</a>
     <a href="#food_drinks">Food & Drinks</a>
