trial design and functionalties

--- a/tourism_web_app/templates/home.html
+++ b/tourism_web_app/templates/home.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LLC Tourism</title>
   <link rel="stylesheet" href="{% static '/style.css' %}">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
   <!-- Navbar -->
@@ -27,6 +28,7 @@
       <img src="{% static '/assets/band.jpg' %}" alt="band">
     </section>
     
+    
     <section class="image-section">
       <img src="{% static '/assets/lovetheph-logo.png' %}" alt="Lapu-Lapu City">
       <div class="search-container">
@@ -41,7 +43,7 @@
     </section>
   </div>
 
-  <!-- Destination Section -->
+
   <!-- Destination Section -->
 <section class="destination-section">
     <h2>Destination</h2>
