--- a/tourism_web_app/templates/torism2.html
+++ b/tourism_web_app/templates/torism2.html
@@ -78,7 +78,7 @@
               <!-- Attractions Section -->
               <div class="landing-page-item">
                 <div class="landing-page-image-container">
-                    <img src="{% static '/slideshow/white-wall-living-room-have-sofa-decoration-3d-rendering.jpg' %}" alt="Lodging" class="landing-page-image" />
+                    <img src="{% static '/assets/attraction.jpg' %}" alt="Lodging" class="landing-page-image" />
                 </div>
                 <span class="landing-page-text">Attractions</span>
               </div>
@@ -86,7 +86,7 @@
               <!-- Food Section -->
               <div class="landing-page-item">
                 <div class="landing-page-image-container">
-                    <img src="{% static '/slideshow/white-wall-living-room-have-sofa-decoration-3d-rendering.jpg' %}" alt="Lodging" class="landing-page-image" />
+                    <img src="{% static '/assets/food.jpg' %}" alt="Lodging" class="landing-page-image" />
                 </div>
                 <span class="landing-page-text">Food</span>
               </div>
@@ -94,7 +94,7 @@
               <!-- Activities Section -->
               <div class="landing-page-item">
                 <div class="landing-page-image-container">
-                    <img src="{% static '/slideshow/white-wall-living-room-have-sofa-decoration-3d-rendering.jpg' %}" alt="Lodging" class="landing-page-image" />
+                    <img src="{% static '/assets/activity.jpg' %}" alt="Lodging" class="landing-page-image" />
                 </div>
                 <span class="landing-page-text">Activities</span>
               </div>
@@ -102,7 +102,7 @@
               <!-- Events Section -->
               <div class="landing-page-item">
                 <div class="landing-page-image-container">
-                    <img src="{% static '/slideshow/white-wall-living-room-have-sofa-decoration-3d-rendering.jpg' %}" alt="Lodging" class="landing-page-image" />
+                    <img src="{% static '/assets/events.jpg' %}" alt="Lodging" class="landing-page-image" />
                 </div>
                 <span class="landing-page-text">Events</span>
               </div>
