--- a/tourism_web_app/templates/home.html
+++ b/tourism_web_app/templates/home.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="{% static '/tourism2.css'  %}" rel="stylesheet" />
+    <link href="{% static '/home.css'  %}" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap"
@@ -40,6 +40,7 @@
             src="{% static '/assets/lovetheph-logo.png' %}"
             alt="Lapu-Lapu City"
           />
+          <p>Lapu-Lapu City</p>
           <div class="search-container">
             <section class="search-section">
               <div class="search-bar">
