--- a/tourism_web_app/templates/home.html
+++ b/tourism_web_app/templates/home.html
@@ -40,7 +40,7 @@
             src="{% static '/assets/lovetheph-logo.png' %}"
             alt="Lapu-Lapu City"
           />
-          <p>Lapu-Lapu City</p>
+          <p>LAPU-LAPU CITY</p>
           <div class="search-container">
             <section class="search-section">
               <div class="search-bar">
