--- a/user_side/templates/accomodation.html
+++ b/user_side/templates/accomodation.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static '/home.css'  %}" rel="stylesheet" />
   </head>
@@ -42,6 +43,38 @@
         </div>
       </div>
     </div>
+    <div class="container my-5">
+      <div class="row justify-content-center">
+        <div class="col-12 col-sm-8 col-md-6 col-lg-4 p-4 bg-white rounded shadow-sm mx-auto">
+          <h3 class="text-center mb-4">FACILITIES</h3>
+          <div class="row text-center">
+            <!-- Icon 1 -->
+            <div class="col-6 col-md-4 mb-4">
+              <div class="icon-container p-4">
+                <i class="bi bi-house-door" style="font-size: 40px;"></i>
+                <label class="d-block mt-2">Building</label>
+              </div>
+            </div>
+            <!-- Icon 2 -->
+            <div class="col-6 col-md-4 mb-4">
+              <div class="icon-container p-4">
+                <i class="bi bi-gear" style="font-size: 40px;"></i>
+                <label class="d-block mt-2">Equipment</label>
+              </div>
+            </div>
+            <!-- Icon 3 -->
+            <div class="col-6 col-md-4 mb-4">
+              <div class="icon-container p-4">
+                <i class="bi bi-telephone" style="font-size: 40px;"></i>
+                <label class="d-block mt-2">Communication</label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
