--- a/user_side/templates/food_drinks.html
+++ b/user_side/templates/food_drinks.html
@@ -87,7 +87,7 @@
     <!-- Hero Section (Room and Rates) -->
     <div class="container">
       <div class="col-12 p-4 bg-white rounded shadow-sm">
-        <h3 class="text-center mb-4" style="font-size: 2.5vw;">Room and Rates</h3>
+        <h3 class="text-center mb-4" style="font-size: 2.5vw;">Food & Drinks</h3>
     
         <!-- Row for Cards -->
         <div class="row g-3 justify-content-center">
