--- a/user_side/templates/activity.html
+++ b/user_side/templates/activity.html
@@ -19,11 +19,11 @@
           <span>Lapu-Lapu City Tourism</span>
         </div>
         <nav class="navbar-links">
-          <a href="{% url 'destination' %}">Destinations</a>
-          <a href="{% url 'activity' %}">Activities</a>
-          <a href="{% url 'accommodation' %}">Accommodations</a>
-          <a href="{% url 'food' %}">Food & Drinks</a>
-          <a href="#chat">Let’s Chat!</a>
+            <a href="{% url 'destination' %}">Destinations</a>
+            <a href="{% url 'activity' %}">Activities</a>
+            <a href="{% url 'accommodation' %}">Accommodations</a>
+            <a href="{% url 'food' %}">Food & Drinks</a>
+            <a href="#chat">Let’s Chat!</a>
         </nav>
     </header>
 
@@ -87,7 +87,7 @@
     <!-- Hero Section (Room and Rates) -->
     <div class="container">
       <div class="col-12 p-4 bg-white rounded shadow-sm">
-        <h3 class="text-center mb-4" style="font-size: 2.5vw;">Room and Rates</h3>
+        <h3 class="text-center mb-4" style="font-size: 2.5vw;">Activities</h3>
     
         <!-- Row for Cards -->
         <div class="row g-3 justify-content-center">
