ADMIN changes and continuation

--- a/admin_side/templates/dashboard.html
+++ b/admin_side/templates/dashboard.html
@@ -13,7 +13,7 @@
           </ul>
         </div>
       </div>
-      <h5 class="text-center">Lapu-Lapu City Department of Tourism</h5>
+      <h5 class="text-center" style="margin-bottom: 40px" >Lapu-Lapu City Department of Tourism</h5>
       <div class="card-container">
         <div class="card">Total Destinations<br><span class="fw-bold">25</span></div>
         <div class="card">Total Activities<br><span class="fw-bold">18</span></div>
