--- a/admin_side/templates/admin_article.html
+++ b/admin_side/templates/admin_article.html
@@ -4,7 +4,7 @@
   <!-- Main Content -->
   <div class="content ">
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <h3 class="fw-bold">Destination</h3>
+      <h3 class="fw-bold">Articles</h3>
       <div class="dropdown">
         <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
           Admin Options
