--- a/admin_side/templates/admin_base.html
+++ b/admin_side/templates/admin_base.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
-    <link href="{% static '/style.css'  %}" rel="stylesheet" />
+    <link href="{% static '/admin.css'  %}" rel="stylesheet" />
   </head>
   <body>
     <!-- Sidebar -->
