--- a/css/admin.css
+++ b/css/admin.css
@@ -70,7 +70,7 @@ body {
   display: inline-block;
 }
 .content {
-  background-color: #343a40;
+  background-color: #4d30f2;
   color: white;
 }
 .image-container {
@@ -91,4 +91,13 @@ body {
   max-width: 150px; /* Set a maximum width */
   max-height: 150px; /* Set a maximum height */
   object-fit: contain; /* Maintain the aspect ratio */
+}
+.image-container-card {
+  height: 200px;
+  overflow: hidden;
+}
+.card-img-top {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
